# es_resolve

./: Cargo.toml  README.md
examples/broken_package_json/: index.js  require_fuck.js
examples/relative_pkg_exports/: index.js
examples/relative_pkg_exports/pkg/: package.json
examples/tsconfig_path/: index.ts  tsconfig.json
examples/typescript_import_js/: index.ts
examples/typescript_import_order/: a.tsx  index.ts  tsconfig.json
src/: data.rs  es_resolver.rs  lib.rs  types.rs  utils.rs
src/tests/: mod.rs  package_json.rs  tsconfig.rs
src/vendors/: json_comments.rs
tests/: test_es_resolver.rs  test_es_resolver_examples.rs  test_es_resolver_fixtures.rs  test_util.rs
tests/fixtures/directory/package_json_browser/: package.json
tests/fixtures/node_modules_/: import_exports.mjs  import_exports_array.mjs  require.cjs
tests/fixtures/tspaths/constant/: tsconfig.json
tests/fixtures/tspaths/match-priority/: tsconfig.json
tests/fixtures/tspaths/match-priority/@high-priority/: type.ts
tests/fixtures/tspaths/match-priority/@utils/: type.ts
tests/fixtures/tspaths/root-star/: tsconfig.json
tests/fixtures/tspaths/root-star/components/: Text.tsx
tests/fixtures/tspaths/star/: tsconfig.json
tests/fixtures/tspaths/star/pages/: Login.tsx
tests/fixtures/tspaths/tsconfig-comments/: index.ts  tsconfig.json
tests/fixtures/tspaths/tsconfig-extends/node_modules_/: index.ts  tsconfig.json
tests/fixtures/tspaths/tsconfig-extends/relative/: index.ts  tsconfig.json
tests/fixtures/tspaths/tsconfig-extends/relative/base-config/: tsconfig.base.json
tests/fixtures/tspaths/tsconfig-syntax/: index.ts  tsconfig.json
