[package]
name = "es_resolve"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.9.1", features = ["serde"] }
path-clean = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["preserve_order"] }
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = "0.3.16"
